Refactored firebase service with observables

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,5 @@
 <p>You logged in as {{currentUserName}}</p>
-<button (click)="logout()">Logout</button>
+<button (click)="signOut()">Logout</button>
+<button (click)="getCurrentUser()">Test</button>
+<br>
+<input type="text" #name>
