--- a/src/app/components/auth-form/auth-form.component.html
+++ b/src/app/components/auth-form/auth-form.component.html
@@ -28,5 +28,6 @@
       </form>
     </div>
     <button (click)="onGoogleSignIn()">Google</button>
+    <button (click)="getCurrentUser()">Test</button>
   </div>
 </div>
